# libmdbx-bindings

./: .gitignore  Cargo.toml
bindings-derive/: Cargo.toml
bindings-derive/src/: lib.rs  libmdbx_value.rs
libmdbx/: Cargo.toml
libmdbx/src/: codec.rs  cursor.rs  database.rs  environment.rs  error.rs  flags.rs  lib.rs  transaction.rs  txn_manager.rs
src/: codecs.rs  lib.rs  provider.rs  tables.rs  traits.rs
src/implementation/: env.rs  mod.rs
src/implementation/native/: cursor.rs  tx.rs  utils.rs
tests/: Cargo.toml
tests/src/: main.rs
