[package]
name = "libmdbx-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "libmdbx_bindings"


[dependencies]
libmdbx-native = { path = "./libmdbx" }
libmdbx-bindings-derive = { path = "./bindings-derive" }

# alloy
alloy-primitives = "0.8.20"
alloy-rlp = "0.3.10"

# reth
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0", features = [
    "return-borrowed",
    "read-tx-timeouts",
] }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.0", tag = "v1.3.0" }

# misc
parking_lot = "0.12.1"
eyre = "0.6"
page_size = "0.6.0"
tracing = "0.1.0"
rkyv = { git = "https://github.com/rkyv/rkyv.git", branch = "0.7-hashbrown-0.14", features = [
    "validation",
] }
zstd = "0.13"
paste = "1.0.14"
bytes = "1.5"
serde = { version = "1", features = ["derive"] }
