[package]
name = "libmdbx-native"
license = "Apache-2.0"
description = "Idiomatic and safe MDBX wrapper with good licence"
edition = "2021"

[lib]
name = "libmdbx_native"

[dependencies]
byteorder = "1"
indexmap = "2"
libc = "0.2"
bitflags = "2.5.0"
parking_lot = "0.12.1"
derive_more = "0.99.17"
thiserror = "2.0.3"
dashmap = { version = "5.5.3", features = ["inline"] }
tracing = "0.1.0"

ffi = { package = "reth-mdbx-sys", git = "https://github.com/paradigmxyz/reth", version = "1.3.4", tag = "v1.3.4" }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
pprof = "0.13"

[target.'cfg(not(windows))'.dependencies]
libffi = "3.2.0"

[features]
default = []
return-borrowed = []
